--- a/WHSpotifyDemo/Base.lproj/LaunchScreen.storyboard
+++ b/WHSpotifyDemo/Base.lproj/LaunchScreen.storyboard
@@ -1,57 +1,45 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="ADy-1H-O81">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="9sL-H7-UhB">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="EHf-IW-A2E">
+        <scene sceneID="1Rg-qD-myB">
             <objects>
-                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                <viewController id="9sL-H7-UhB" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
-                        <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
+                        <viewControllerLayoutGuide type="top" id="PVV-xl-2CF"/>
+                        <viewControllerLayoutGuide type="bottom" id="7QS-qB-EpD"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
+                    <view key="view" contentMode="scaleToFill" id="3xh-MG-oyd">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pht-Pw-ih1">
-                                <rect key="frame" x="196" y="300" width="209" height="57"/>
-                                <color key="backgroundColor" red="0.1215686275" green="0.74117647060000003" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ybc-xf-c2j">
-                                <rect key="frame" x="196" y="365" width="209" height="57"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            </button>
+                            <imageView userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WearhausLogo" translatesAutoresizingMaskIntoConstraints="NO" id="fEE-mc-KdO">
+                                <rect key="frame" x="216" y="111" width="167" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="JGK-mK-45M"/>
+                                    <constraint firstAttribute="width" constant="167" id="ufm-AX-udQ"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fEE-mc-KdO" firstAttribute="centerY" secondItem="3xh-MG-oyd" secondAttribute="centerY" constant="-125" id="qZh-pq-1sD"/>
+                            <constraint firstItem="fEE-mc-KdO" firstAttribute="centerX" secondItem="3xh-MG-oyd" secondAttribute="centerX" id="smL-WD-2zn"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Hx5-We-l3c"/>
+                    <navigationItem key="navigationItem" id="fZ7-gL-Hs1"/>
                     <nil key="simulatedTopBarMetrics"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gNV-Af-IFo" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="865" y="375"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="teT-qE-P03">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ADy-1H-O81" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OIY-qv-ZSi">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="01J-lp-oVM" kind="relationship" relationship="rootViewController" id="e4P-yL-EBY"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Nv6-XV-E3p" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="1652" y="1062"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="WearhausLogo" width="500" height="500"/>
+    </resources>
 </document>
